Designation & Profile Image Changes

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <div class="about-container">
   <div class="about-content">
     <div class="image">
-      <img src="images/hero.webp" alt="Profile_Image" style="border-radius: 20%; box-shadow: 0px 0px 20px; max-width: 550px; max-height: 550px;">
+      <img src="images/hero.webp" alt="Profile_Image">
     </div>
     <div class="about-text">
       <h2>About Me</h2>
