About Me Content Changes & Mobile/Desktop View Header changes

--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
     <div class="about-text">
       <h2>About Me</h2>
       <p>
-        I am a dedicated and detail-oriented Test Engineer with 1 year of experience in software testing. I have a strong passion for ensuring the quality and reliability of software products. My expertise lies in manual testing, test case creation, test execution, defect tracking, and test reporting.
+        I am a Test Engineer with strong programming skills in Python, SQL, JavaScript & Selenium. I excel in automation testing, ensuring software quality & efficiency. I also conduct thorough manual testing, tracking defects diligently.
       </p>
-      <p>I am skilled in using testing tools and technologies such as test management systems, bug tracking systems, and automation frameworks. I am always eager to learn and stay updated with the latest trends and advancements in the field of software testing.</p>
+      <p>
+        Moreover, my expertise extends to API load testing. I believe in effective communication & teamwork. Always eager to learn, I stay updated with the latest testing trends, delivering innovative solutions for superior software quality.
+      </p>
       <br>
       <div class="about-Education">
         <div class="left-side">
