--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
       <div class="certificate-box">
         <img src="images/certificate_C.webp" alt="Certificate 2">
       </div>
-      <!-- <div class="certificate-box">
-        <img src="images/certificate_image_3.png" alt="Certificate 3">
+      <div class="certificate-box">
+        <img src="images/udemy1.jpg" alt="Certificate 3">
       </div>
       <div class="certificate-box">
-        <img src="images/certificate_image_4.png" alt="Certificate 4"> -->
+        <img src="images/udemy2.jpg" alt="Certificate 4">
       </div>
     </div>
   </div>
