New Download Resume Button Added.

--- a/index.html
+++ b/index.html
@@ -317,7 +317,13 @@
       <!-- Add more company sections as needed -->
     </div>
   </section>
-  <br>
+  <section>
+    <div id="resume-button">
+      <a href="https://github.com/your-username/your-repo/raw/main/path-to-your-resume.pdf" download>
+        Download Resume
+      </a>
+    </div>
+  </section>  <br>
     <br>
     </section>
     <section>
