--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
   </section>
   <section>
     <div id="resume-button">
-      <a href="https://github.com/sidd-1967/Portfolio/raw/main/Resume/siddhesh-resume.pdf" download>
-        Download Resume
+      <a href="https://github.com/sidd-1967/Portfolio/raw/main/Resume/siddhesh-resume.pdf" id="download-link" download>
+        <span class="button-text">Download Resume</span>
       </a>
-    </div>    
-  </section>  <br>
-    <br>
+    </div>          
+  </section>  
+      <br>
     </section>
     <section>
       <div id="contact">
