--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
         <div class="right-side">
           <h3><i class="far fa-heart"></i> Interests</h3>
           <ul>
-            <li>Automation Testing</li>
-            <li>Exploring Software</li>
-            <li>Bug Hunting</li>
-            <li>Ethical Hacking</li>
+            <li>Gaming</li>
+            <li>Live Streaming</li>
           </ul>
         </div>
       </div>
@@ -338,7 +336,7 @@
         </form>
       </div>      
     </section>      
-  <footer>
+  <footer>  
       <div class="container">
           &copy; 2023 My Portfolio
       </div>
