added new project

--- a/index.html
+++ b/index.html
@@ -265,24 +265,38 @@
 <section id="projects">
   <div class="container">
     <h2 class="project-heading">Projects</h2>
-    <div class="project">
+    <div id="carrental-project" class="project">
       <h3>CAR RENTAL PORTAL</h3>
-      <p>Developed an intuitive online car rental portal, allowing smooth car booking and management operations, leveraging advanced technologies for seamless performance.</p>
+      <p>CarRental Portal: Crafted with HTML, CSS, and JS, utilizing PHP and MySQL for seamless car booking and management.</p>
       <div class="screenshots">
         <div class="screenshots-inner">
-          <img src="images/project_image_1.webp" alt="Project Screenshot 1">
-          <img src="images/project_image_2.webp" alt="Project Screenshot 2">
-          <img src="images/project_image_3.webp" alt="Project Screenshot 3">
-          <img src="images/project_image_4.webp" alt="Project Screenshot 4">
-          <img src="images/project_image_5.webp" alt="Project Screenshot 5">
-          <img src="images/project_image_6.webp" alt="Project Screenshot 6">
-          <img src="images/project_image_7.webp" alt="Project Screenshot 7">
-          <img src="images/project_image_8.webp" alt="Project Screenshot 8">
-          <img src="images/project_image_9.webp" alt="Project Screenshot 9">
+          <img src="images/carrental1.webp" alt="Carrental-project">
+          <img src="images/carrental2.webp" alt="Carrental-project">
+          <img src="images/carrental3.webp" alt="Carrental-project">
+          <img src="images/carrental4.webp" alt="Carrental-project">
+          <img src="images/carrental5.webp" alt="Carrental-project">
+          <img src="images/carrental6.webp" alt="Carrental-project">
+          <img src="images/carrental7.webp" alt="Carrental-project">
+          <img src="images/carrental8.webp" alt="Carrental-project">
+          <img src="images/carrental9.webp" alt="Carrental-project">
         </div>
       </div>
     </div>
-  </div>      
+  <br>
+  <div id="technomarket-project" class="project">
+    <h3>TechnoMarket</h3>
+    <p>TechnoMarket: Developed with HTML, CSS, and JS. Future plans include Python, Django, and MySQL integration for advanced functionality and robust database management.</p>
+    <div class="screenshots">
+      <div class="screenshots-inner">
+        <img src="images/TechnoMarket1.webp" alt="technomarket-project">
+        <img src="images/TechnoMarket2.webp" alt="technomarket-project">
+        <img src="images/TechnoMarket3.webp" alt="technomarket-project">
+        <img src="images/TechnoMarket4.webp" alt="technomarket-project">
+        <img src="images/TechnoMarket5.webp" alt="technomarket-project">
+        <img src="images/TechnoMarket6.webp" alt="technomarket-project">
+      </div>
+    </div>
+  </div>
     <!-- Add more project sections as needed -->
   </section> 
   <section id="clients">
