Contact Me Changes

--- a/index.html
+++ b/index.html
@@ -82,14 +82,6 @@
               <span class="name">SIDDHESH D. GOVALKAR</span><br>
               <span class="designation">Test Engineer</span>
               <br>
-              <span class="email"><a href="mailto:siddheshgovalkar1967@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;siddheshgovalkar1967@gmail.com&nbsp;&nbsp; </a></span> <br> 
-              <span class="phone"><a href="tel:+918070506024"><i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;+91-8070506024</a></span>
-              <div class="social-icons d-flex">
-                <li><a href="https://wa.me/918070506024" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/siddhesh-govalkar-b65a43228/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="https://www.facebook.com/Killer0502/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/_siddhesh.0502_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-              </div>                  
           </div>
           <div class="QAimage">
               <img src="images/QA.webp" alt="Portfolio Image"/>
@@ -329,32 +321,39 @@
       <!-- Add more company sections as needed -->
     </div>
   </section>
-  <section>
-    <div id="resume-button">
-      <a href="https://github.com/sidd-1967/Portfolio/raw/main/Resume/siddhesh-resume.pdf" id="download-link" download>
-        <span class="button-text">Download Resume</span>
-      </a>
-    </div>          
-  </section>  
-      <br>
-    </section>
-    <section>
-      <div id="contact">
-        <h2>Contact Me</h2>
-        <form action="mailto:siddheshgovalkar1967@gmail.com" method="post" enctype="text/plain">
-          <input type="text" id="name" name="name" placeholder="Your Name" maxlength="50" required>
-          <input type="email" id="email" name="email" placeholder="Your Email" maxlength="50" required>
-          <input type="text" id="phone" name="phone" placeholder="Your Phone Number" pattern="[6-9][0-9]{9}" maxlength="10">
-          <textarea id="message" name="message" placeholder="Your Message" maxlength="250" required></textarea>
-          <button id="sendBtn">Send Message</button>
-        </form>
-      </div>      
-    </section>      
-  <footer>  
-      <div class="container">
-          &copy; 2023 My Portfolio
-      </div>
-  </footer>
+  <div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fas fa-paper-plane"></i>  siddheshgovalkar1967@gmail.com</p>
+                <p><i class="fas fa-phone-square-alt"></i> 8070506024</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/Killer0502/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com/_sid0502_?t=IBQNVWcmbnXC73-OluAyXg&s=09" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/_siddhesh.0502_/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/siddhesh-govalkar-b65a43228/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://wa.me/918070506024" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <a href="https://github.com/sidd-1967/Portfolio/raw/main/Resume/siddhesh-resume.pdf" download class="btn btn2">Download CV</a>
+            </div>
+            <div class="contact-right">
+                    <form action="mailto:siddheshgovalkar1967@gmail.com" method="post" enctype="text/plain">
+                      <input type="text" id="name" name="name" placeholder="Your Name" maxlength="50" required>
+                      <input type="email" id="email" name="email" placeholder="Your Email" maxlength="50" required>
+                      <textarea id="message" name="message" placeholder="Your Message" rows="5" maxlength="250" required></textarea>
+                      <div class="btn-wrapper">
+                        <button type="submit" class="btn btn3">Submit</button>
+                      </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>&copy; 2023 Portfolio by Siddhesh Govalkar</p>
+    </div>
+</div>
+
   <a href="#" id="scrollToTopButton" title="Scroll to Top"></a>
 </body>
 </html>
