--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 <!-- footer_start -->
     <footer class="portfolio-footer">
         <div class="left">
-            <img src="img/qa.png" alt="Your Logo">
+            <img src="img/qa.png" alt="YourLogo">
         </div>
         <div class="middle">
             <nav>
@@ -421,10 +421,9 @@
             </nav>
         </div>
         <div class="right">
-            <a href="#"><i class="fa fa-whatsapp"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>    
+            <a href="https://www.linkedin.com/in/siddhesh-govalkar-b65a43228/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://twitter.com/_sid0502_"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/Killer0502"><i class="fa fa-facebook"></i></a>    
         </div>
     </footer>  
 <!-- footer_end -->
