--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
-                                    <i class="flaticon-case"></i>
                                     <h3>MCA</h3>
                                     <p>Master of Computer Application</p> 
                                     <p>Lovely Professional University</p>
@@ -142,7 +141,6 @@
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
-                                    <i class="flaticon-courthouse"></i>
                                     <h3>BSC CS</h3>
                                     <p>Bachelor of Computer Science</p> 
                                     <p>Nirmala Memorial Foundation College of Commerce and Science</p>
@@ -157,7 +155,6 @@
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
-                                    <i class="flaticon-judge"></i>
                                     <h3>HSC</h3>
                                     <p>Junior College</p> 
                                     <p>Navjeevan JR College of Commere and Science</p>
@@ -172,7 +169,6 @@
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
-                                    <i class="flaticon-jury"></i>
                                     <h3>SSC</h3>
                                     <p>High School</p> 
                                     <p>St Lawrance High School </p>
@@ -242,7 +238,7 @@
                         <div class="single_loyers text-center">
                                 <div class="single_loyers text-center">
                                     <div class="thumb">
-                                        <img src="img/automationtesting.webp" alt="">
+                                        <img src="img/automation.jpg" alt="">
                                     </div>
                                     <h3>Automation</h3>
                                 </div>
