--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <link rel="manifest" href="img/favicon/site.webmanifest">
     <script src="js/script.js"></script>
+    <script src="js/contactus.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -380,9 +381,10 @@
             </div>
             <div class="col-xl-6 offset-xl-1 col-md-6 col-md-12 col-lg-6">
                 <div class="appointment_info">
-                    <!-- <h3>Contact Information</h3>
-                    <p>You can reach out to me via email, phone, or by using the contact form below. I'll do my best to respond to your message promptly.</p> -->
-                    <!-- <form action="mailto:recipient@example.com" method="post" enctype="text/plain">
+                    <h3>Contact Information</h3>
+                    <p>You can reach out to me via email, phone, or by using the contact form below. I'll do my best to respond to your message promptly.</p>
+                    <form action="#" 
+                    method="post" enctype="text/plain">
                         <div class="row">
                             <div class="col-xl-6 col-md-6">
                                 <input type="text" name="Name" placeholder="Your Name" required>
@@ -400,12 +402,12 @@
                                 <div class="appoinment_button">
                                     <button class="boxed-btn5" type="submit">Submit</button>
                                 </div>                            
-                            </div> -->
-                            <div class="custom-scrollbar" id="scrollbar">
+                            </div>
+                            <!-- <div class="custom-scrollbar" id="scrollbar">
                                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXOIVLRlUk9aJWTvmk1-7AQ239vqmKUL_qiV0WeI1Kek3f9w/viewform?embedded=true" 
                                 width="540" height="400" frameborder="0" marginheight="0" marginwidth="0" 
                                 class="custom-form" overflow="hidden" >Loading… </iframe>
-                            </div>
+                            </div> -->
                         </div>
                     </form>                    
                 </div>
