--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                                     <h3>BSC CS</h3>
                                     <p>Bachelor of Computer Science</p> 
                                     <p>Nirmala Memorial Foundation College of Commerce and Science</p>
+                                    <p>CGPI: 8.38</p>
                                 </div>
                             </div>
                         </div>
@@ -164,6 +165,7 @@
                                     <h3>HSC</h3>
                                     <p>Junior College</p> 
                                     <p>Navjeevan JR College of Commere and Science</p>
+                                    <p>Percentage: 50.00%</p>
                                 </div>
                             </div>
                         </div>
@@ -178,6 +180,7 @@
                                     <h3>SSC</h3>
                                     <p>High School</p> 
                                     <p>St Lawrance High School </p>
+                                    <p>Percentage: 60.20%</p>
                                 </div>
                             </div>
                         </div>
@@ -255,7 +258,7 @@
         </div>
         <!-- Programming Skills Ends -->
 <!-- Certification Starts -->
-<section id="certificates" id="certificate">
+<!-- <section id="certificates" id="certificate">
     <div class="container">
       <h2 class="project-heading">Certification</h2>
       <div class="certificate">
@@ -275,7 +278,7 @@
         </div>
       </div>
     </div>
-</section>
+</section> -->
 <!-- Certification End -->
 <!-- Projects Starts  -->
 <section id="projects">
