--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="#home" href="index.html">home</a></li>
+                                        <li><a href="#">Home</a></li>
                                         <li><a href="#about">About</a></li>
                                         <li><a href="#skills">Skills</a></li>
                                         <li><a href="#project">Projects</a></li>
@@ -43,13 +43,6 @@
                                     </ul>
                                 </nav>
                             </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-2 d-none d-lg-block">
-                            <div class="social_media_links">
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
                     </div>
                 </div>
@@ -99,7 +92,7 @@
                         <div class="about_thumb">
                             <div class="image_hover">
                                 <div class="hover_inner">
-                                    <img src="img/img2.jpeg" alt="" style="border-radius: 50%; object-fit: fill;">
+                                    <img src="img/img2.webp" alt="" style="border-radius: 50%; object-fit: fill;">
                                 </div>
                             </div>
                         </div>
