image update & updated footer info

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="img/logo2.png" alt="" style="width: 70%; margin-left:8px">
+                                    <img src="img/logo2.webp" alt="" style="width: 70%; margin-left:8px">
                                 </a>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                 <div class="col-xl-6 col-md-6">
                     <div class="single_about_info text-center">
                         <div class="about_thumb">
-                            <img src="img/manager.png" alt="">
+                            <img src="img/manager.webp" alt="">
                         </div>
                         <h3>Skilled Test Engineer<br>
                             </h3>
@@ -122,7 +122,7 @@
                     <div class="col-xl-3 col-md-6">
                         <div class="single_practice">
                             <div class="practice_image">
-                                <img src="img/lpu-logo.png" alt="">
+                                <img src="img/lpu-logo.webp" alt="">
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
@@ -136,7 +136,7 @@
                     <div class="col-xl-3 col-md-6">
                         <div class="single_practice">
                             <div class="practice_image">
-                                <img src="img/nmfc-logo.png" alt="">
+                                <img src="img/nmfc-logo.webp" alt="">
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
@@ -151,7 +151,7 @@
                     <div class="col-xl-3 col-md-6">
                         <div class="single_practice">
                             <div class="practice_image">
-                                <img src="img/hsc-logo.png" alt="">
+                                <img src="img/hsc-logo.webp" alt="">
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
@@ -166,7 +166,7 @@
                     <div class="col-xl-3 col-md-6">
                         <div class="single_practice">
                             <div class="practice_image">
-                                <img src="img/ssc-logo.jpeg" alt="">
+                                <img src="img/ssc-logo.webp" alt="">
                             </div>
                             <div class="practice_hover text-center">
                                 <div class="hover_inner">
@@ -208,7 +208,7 @@
                             
                                 <div class="single_loyers text-center">
                                     <div class="thumb">
-                                        <img src="img/selenium.jpg" alt="">
+                                        <img src="img/selenium.webp" alt="">
                                     </div>
                                     <h3>Selenium</h3>
                                 </div>
@@ -219,7 +219,7 @@
                             
                                 <div class="single_loyers text-center">
                                     <div class="thumb">
-                                        <img src="img/sql.jpg" alt="">
+                                        <img src="img/sql.webp" alt="">
                                     </div>
                                     <h3>SQL</h3>
                                 </div>
@@ -249,30 +249,7 @@
                 </div>
             </div>
         </div>
-        <!-- Programming Skills Ends -->
-<!-- Certification Starts -->
-<!-- <section id="certificates" id="certificate">
-    <div class="container">
-      <h2 class="project-heading">Certification</h2>
-      <div class="certificate">
-        <div class="certificate-images">
-          <div class="certificate-box">
-            <img src="img/certificate_python.webp" alt="Certificate 1">
-          </div>
-          <div class="certificate-box">
-            <img src="img/certificate_C.webp" alt="Certificate 2">
-          </div>
-          <div class="certificate-box">
-            <img src="img/udemy1.jpg" alt="Certificate 3">
-          </div>
-          <div class="certificate-box">
-            <img src="img/udemy2.jpg" alt="Certificate 4">
-          </div>
-        </div>
-      </div>
-    </div>
-</section> -->
-<!-- Certification End -->
+        <!-- Programming Skills Ends -->    
 <!-- Projects Starts  -->
 <section id="projects">
     <div class="container" id="project">
@@ -319,7 +296,7 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/Brained.jpg" style="object-fit: contain;">
+                                <img class="position-absolute w-100 h-100 rounded" src="img/Brained.webp" style="object-fit: contain;">
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -358,7 +335,7 @@
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100 rounded" src="img/DgNote_Logo.jpg" style="object-fit: contain;">
+                            <img class="position-absolute w-100 h-100 rounded" src="img/DgNote_Logo.webp" style="object-fit: contain;">
                         </div>
                     </div>
                 </div>
@@ -372,7 +349,7 @@
         <div class="row align-items-center">
             <div class="col-xl-5 col-md-6 col-lg-6">
                 <div class="appiontment_thumb d-none d-lg-block">
-                    <img src="img/qa.png" alt="">
+                    <img src="img/qa.webp" alt="">
                 </div>
             </div>
             <div class="col-xl-6 offset-xl-1 col-md-6 col-md-12 col-lg-6">
@@ -412,11 +389,12 @@
 <!-- footer_start -->
     <footer class="portfolio-footer">
         <div class="left">
-            <img src="img/qa.png" alt="YourLogo">
+            <img src="img/qa.webp" alt="YourLogo">
         </div>
         <div class="middle">
             <nav>
                 <div class="copyright-text">© 2023 Portfolio by Siddhesh Govalkar</div> 
+                <div class="contact-info">siddheshgovalkar1967@gmail.com | +91 8070506024</div>
             </nav>
         </div>
         <div class="right">
