updated automation image.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,23 @@
                     </div>
                 </div>
             </div>
-        </div>
+            <!-- <div class="mobile-menu">
+                <div class="menu-panel">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="#project">Projects</a></li>
+                            <li><a href="#experience">Experience</a></li>
+                            <li><a href="#contact_me">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div> -->
     </header>
+
     <!-- Home page start -->
     <div class="slider_area ">
         <div class="slider_area_inner slider_bg_1 d-flex align-items-center">
@@ -240,7 +255,7 @@
                         <div class="single_loyers text-center">
                                 <div class="single_loyers text-center">
                                     <div class="thumb">
-                                        <img src="img/automation.jpg" alt="">
+                                        <img src="img/automation.webp" alt="">
                                     </div>
                                     <h3>Automation</h3>
                                 </div>
@@ -286,7 +301,20 @@
         </div>
       </div>
     </div>
-      <!-- Add more project sections as needed -->
+</section>
+<section>
+    <div class="container">
+        <h2 class="certificates">Certificates</h2>
+    <div id="certificate" class="certificate">
+        <div class="certificate_screenshots">
+          <div class="certificate-screenshots-inner">
+            <img src="img/certificate1.webp" alt="certificate">
+            <img src="img/certificate2.webp" alt="certificate">
+            <img src="img/certificate3.webp" alt="certificate">
+            <img src="img/certificate4.webp" alt="certificate">
+          </div>
+        </div>
+      </div>
     </section> 
         <!-- Experience Start -->
         <div class="container-xxl py-5" id="experience">
