--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <h3>SIDDHESH <br>
                                     DHANANJAY GOVALKAR</h3>
                                 <p>Test Engineer at DgNote Technologies </p>
-                                <a href="https://github.com/sidd-1967/Portfolio/raw/main/resume/siddhesh-resume/pdf" class="boxed-btn4 ">Download CV</a>
+                                <a href="https://github.com/sidd-1967/Portfolio/raw/main/resume/siddhesh-resume.pdf" class="boxed-btn4 ">Download CV</a>
                             </div>
                         </div>
                     </div>
