image name updated

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/Brained.webp" style="object-fit: contain;">
+                                <img class="position-absolute w-100 h-100 rounded" src="img/brained.webp" style="object-fit: contain;">
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
