added whatsapp icon

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <div class="right">
             <a href="https://www.linkedin.com/in/siddhesh-govalkar-b65a43228/" target="_blank"><i class="fa fa-linkedin"></i></a>
             <a href="https://twitter.com/_sid0502_" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.facebook.com/Killer0502" target="_blank"><i class="fa fa-facebook"></i></a>    
+            <a href="https://api.whatsapp.com/send?phone=918070506024" target="_blank"><i class="fa fa-whatsapp"></i></a>    
         </div>        
     </footer>  
 <!-- footer_end -->
