--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="about_thumb">
                             <div class="image_hover">
                                 <div class="hover_inner">
-                                    <img src="img/img2.webp" alt="" style="border-radius: 50%; object-fit: fill;">
+                                    <img src="img/me.webp" alt="" style="border-radius: 50%; object-fit: fill;">
                                 </div>
                             </div>
                         </div>
